# continuous-patterns

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  NOTES.md  README.md  pyproject.toml
configs/: README.md  baseline.yaml  sweep.yaml
configs/agate_ch/: baseline.yaml  gamma_scan.yaml  sweep.yaml
configs/agate_ch/anisotropy/: aniso_10x.yaml  aniso_2x.yaml  aniso_5x.yaml  iso.yaml  iso_kappa_only.yaml
configs/agate_ch/gravity/: alpha_0_00.yaml  alpha_0_05.yaml  alpha_0_10.yaml  alpha_0_20.yaml  alpha_0_40.yaml  alpha_0_80.yaml
configs/agate_ch/stage_sequence/: run_a_stage1.yaml  run_b_long.yaml  run_b_stage2.yaml
configs/agate_ch/stress/: flamant_B_0_1.yaml  flamant_B_0_25.yaml  flamant_B_0_5.yaml  flamant_B_1_0.yaml  flamant_B_2_0.yaml  kirsch_sigma_1_0.yaml  pressure_gradient_0_25.yaml  (+12 more)
configs/agate_stage2/: baseline.yaml  gamma_2.yaml  gamma_3.yaml  gamma_4.yaml  gamma_5.yaml  gamma_6.yaml  gamma_7.yaml  gamma_8.yaml
docs/: ARCHITECTURE.md  CONFIG_LEGEND.md  CONTRIBUTING.md  PHYSICS.md  TODOs.md
examples/: compare_with_archive.py  inspect_flux_samples.py  reproduce_canonical.py
experiments/: solver_settings.example.yaml
experiments/canonical/: agate_stage2_gamma_5.yaml  aging_demo.yaml  bulk_relaxation_gamma_5.yaml  elliptic_pinning.yaml  gravity_demo.yaml  medium_pinning.yaml  medium_pinning_seed123.yaml  no_pinning.yaml  polygon_pinning.yaml  ratchet_only.yaml  rectangular_slot_pinning.yaml  scenario_bulk_relaxation.yaml  scenario_closed_aging.yaml  scenario_closed_supersaturated.yaml  scenario_open_aging.yaml  stress_flamant.yaml  stress_inglis.yaml  stress_kirsch.yaml  stress_lithostatic.yaml  stress_tectonic.yaml  stress_uniform_biaxial.yaml  strong_pinning.yaml  wedge_pinning.yaml
experiments/exploratory/: medium_pinning_seed123.yaml  no_pinning.yaml  ratchet_only.yaml  stress_flamant.yaml  stress_pressure_gradient.yaml  stress_pure_shear.yaml  stress_uniform_biaxial.yaml  stress_uniform_uniaxial.yaml  strong_pinning.yaml
experiments/sweeps/: gamma_scan.yaml
results/agate_ch/: README.md
results/example/: README.md  summary.json
scripts/: inspect_flux.py  reproduce_canonical.py
src/continuous_patterns/: __init__.py  plot_captions.py
tests/: README.md  conftest.py  test_agate_ch.py  test_agate_ch_solver_regression.py  test_agate_stage2_smoke.py  test_basic.py  test_smoke.py
tests/agate_ch/: test_agate_ch.py  test_anisotropic_kappa.py  test_basic.py  test_c0_alpha_gravity.py  test_model_uniform_biaxial.py  test_smoke.py  test_stress_coupling_psi.py  test_stress_fields.py
tests/integration/: __init__.py  test_agate_ch_smoke.py  test_agate_ch_snapshots.py  test_aging_smoke.py  test_gravity_smoke.py  test_lithospheric_stresses_smoke.py  test_new_geometries_smoke.py  test_scenarios_smoke.py  test_stage2_smoke.py
tests/regression/: test_placeholder.py
tests/unit/: test_diagnostics.py  test_diagnostics_Q_ratio.py  test_diagnostics_stage1.py  test_gravity.py  test_imex.py  test_inactive_phases.py  test_io.py  test_io_snapshots_h5.py  test_masks.py  test_plot_jablczynski.py  test_potentials.py  test_run.py  test_scenarios.py  test_spectral.py  test_stress.py  test_sweep.py
(+94 files in other folders)
