[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuum-patterns"
version = "0.1.0"
description = "Research-oriented continuum patterns experiments (JAX)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [{ name = "continuum-patterns contributors" }]
dependencies = []

[project.optional-dependencies]
cpu = ["jax>=0.5"]
cuda = ["jax[cuda12]>=0.5"]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
default-groups = ["dev"]
