[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-patterns"
version = "0.1.0"
description = "Agate and related pattern-formation experiments — pseudospectral Cahn–Hilliard (JAX)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [{ name = "continuous-patterns contributors" }]
dependencies = [
    "h5py>=3",
    "jax>=0.5",
    "matplotlib>=3.8",
    "numpy>=2",
    "pydantic>=2",
    "pyyaml>=6",
    "scipy>=1.11",
    "tqdm>=4",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]>=0.5"]
dev = [
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"continuous_patterns.defaults" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: optional long-running GPU integration tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
